corrected git worksheet

--- a/git_steps_w2m.ipynb
+++ b/git_steps_w2m.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "Each team member will create one Python module in the Codespace. A **Python module** is simply a file containing Python functions or classes.\n",
     "\n",
-    "**Team Member B:**\n",
+    "**Team Member A:**\n",
     "\n",
     "- Create a file named **`ordered_list.py`** in the root directory of the Codespace.\n",
     "- In this file, define the function `get_ordered_list` which should:\n",
@@ -68,12 +68,12 @@
     "FUNCTION get_ordered_list(lst=None):\n",
     "    IF lst is None THEN:\n",
     "        PROMPT user to enter a list of integers (comma-separated)\n",
-    "        CONVERT the input string to a list of integers\n",
+    "        CONVERT the input string to a list of integers (using <<lst = [int(x.strip()) for x in user_input.split(\",\")]>>)\n",
     "    ENDIF\n",
-    "    RETURN the sorted version of the list\n",
+    "    RETURN the sorted version of the list using <<sorted()>> python function (see https://www.w3schools.com/python/ref_func_sorted.asp)\n",
     "```\n",
     "\n",
-    "**Team Member A:**\n",
+    "**Team Member B:**\n",
     "\n",
     "- Create a file named **`search_list.py`** in the root directory of the Codespace.\n",
     "- In this file, define the function `search_ordered_list` which should:\n",
@@ -150,11 +150,16 @@
     "        else:\n",
     "            high = mid - 1\n",
     "    return False\n",
+    "```\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    # Test the function locally\n",
-    "    test_list = [5, 3, 8, 1, 9]\n",
-    "    print(search_ordered_list(test_list, 8))\n",
+    "\n",
+    "**To test**\n",
+    "\n",
+    "\n",
+    "```\n",
+    "# Test the function locally\n",
+    "test_list = [5, 3, 8, 1, 9]\n",
+    "print(search_ordered_list(test_list, 8))\n",
     "```\n",
     "\n",
     "Remember: The goal is for each team member to create and commit their own module."
@@ -170,6 +175,10 @@
     "Once you have created your module files and implemented the required functions, both team members should:\n",
     "\n",
     "1. **Commit their changes locally:**\n",
+    "    Commit the changes in your own in codespaces.\n",
+    "\n",
+    "    Using the command line (i.e. the terminal) you should:\n",
+    " \n",
     "   - Open the terminal in your Codespace.\n",
     "   - Run the following commands:\n",
     "     \n",
@@ -179,10 +188,15 @@
     "     ```\n",
     "\n",
     "2. **Push to the GitHub Repository:**\n",
-    "   - Run the following command:\n",
-    "     \n",
+    "    Push in codespaces (up arrow) then pull to get each other changes (down aolid arrow).\n",
+    "\n",
+    "   Using the command line (i.e. the terminal) you should:\n",
+    "   \n",
+    "   - Open the terminal in your Codespace.\n",
+    "   - Run the following commands:\n",
     "     ```bash\n",
     "     git push\n",
+    "     git pull\n",
     "     ```\n",
     "\n",
     "Team Member A’s repository (the GitHub repo) should now contain both modules. Verify the changes by visiting the GitHub repository page."
@@ -199,7 +213,7 @@
     "- Make sure to test your functions locally in the Codespace before pushing your changes.\n",
     "- If you encounter any issues with Git, Codespaces, or the repository, please ask for help.\n",
     "\n",
-    "Happy coding and good luck with your Week 2 assignment!"
+    "Happy coding!"
    ]
   }
  ],
