--- a/worksheet_w2m.ipynb
+++ b/worksheet_w2m.ipynb
@@ -5,7 +5,7 @@
    "id": "24e472ac-9110-4e2b-a101-3c874b8f4f61",
    "metadata": {},
    "source": [
-    "# Team Collaboration Workbook: Week2M\n",
+    "# Team Collaboration Worksheet: week2M (week 2 Monday)\n",
     "\n",
     "In this exercise, you will work in teams of two (Team member **A** and Team member **B**) to set up a GitHub repository, create Codespaces, and develop two Python modules. Follow the steps below carefully."
    ]
