--- a/git_steps_w2m.ipynb
+++ b/git_steps_w2m.ipynb
@@ -70,8 +70,11 @@
     "        PROMPT user to enter a list of integers (comma-separated)\n",
     "        CONVERT the input string to a list of integers (using <<lst = [int(x.strip()) for x in user_input.split(\",\")]>>)\n",
     "    ENDIF\n",
-    "    RETURN the sorted version of the list using <<sorted()>> python function (see https://www.w3schools.com/python/ref_func_sorted.asp)\n",
+    "    RETURN the sorted version of the list using <<sorted()>> python function \n",
     "```\n",
+    "See [sorted() python function help (click here)](https://www.w3schools.com/python/ref_func_sorted.asp)\n",
+    "\n",
+    "\n",
     "\n",
     "**Team Member B:**\n",
     "\n",
